# PolyTrade

./: .env  .gitignore  Dockerfile  Dockerfile.local  QUICK_TEST.py  README.md  pyproject.toml
.github/workflows/: deploy.yml
LocalTests/: README.md  check_live_markets.py  check_polymarket_live_definition.py  debug_polymarket_api.py  find_proxy_address.py  test_analyzer_local.py  test_api_parameters.py  test_balance_local.py  test_event_dates.py  test_live_games.py  test_live_prices.py  test_live_sports_analyzer.py  test_priority.py  test_proxy_simple.py  test_urgent_filter.py
src/polytrade/: __init__.py  analysis.py  balances.py  config.py  execution.py  firestore.py  logging.py  monitor.py  polymarket_client.py
src/polytrade/api/: __init__.py  analyzer_app.py  monitor_app.py
src/polytrade/services/: __init__.py
src/polytrade/services/analyzer/: __init__.py  analysis.py  app.py
src/polytrade/services/bot_a/: __init__.py  app.py  formatting.py  keyboards.py
src/polytrade/services/bot_b/: __init__.py  app.py
src/polytrade/services/live_sports_analyzer/: README.md  SCHEDULER_SETUP.md  __init__.py  app.py  live_sports_analysis.py  run_local.py
src/polytrade/services/monitor/: __init__.py  app.py  monitor.py
src/polytrade/shared/: __init__.py  balances.py  config.py  execution.py  firestore.py  logging.py  polymarket_client.py
src/polytrade/telegram/: __init__.py  bot_a.py  bot_b.py  formatting.py  keyboards.py
