[tool.poetry]
name = "polytrade"
version = "0.1.0"
description = "Polymarket trading system on GCP (Cloud Run, Firestore, Telegram bots)"
authors = ["Adiel <you@example.com>"]
readme = "README.md"
packages = [
  { include = "polytrade", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
aiogram = "^3.12.0"
httpx = "^0.27.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
google-cloud-firestore = "^2.16.0"
google-auth = "^2.35.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
respx = "^0.21.1"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


